# image_classification_pytorch

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  grad_cam.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  test.py  train.py
.github/workflows/: lint-ci.yaml
config/: .#model_config.py  data_config_template.py  model_config_template.py
src/: loss.py  train.py
src/classification/: grad_cam.py  test.py  train.py
src/classification/configs/: __init__.py  record_config.py  train_config.py
src/classification/data/: data_transformations.py  dataset_loaders.py  default_loader.py
src/classification/networks/: __init__.py  build_network.py  cnn.py  small_darknet.py
src/classification/utils/: classification_metrics.py  classification_tensorboard.py  draw_functions.py  losses.py  type_aliases.py
src/dataset/: .#dataset_utils.py  data_transformations.py  dataset.py  dataset_loaders.py  dataset_utils.py  default_loader.py  defeault_loader.py  transforms.py
src/networks/: build_network.py  cnn.py  lambda_network.py  layers.py  small_darknet.py  wide_net.py
src/utils/: accuracy.py  classification_metrics.py  classification_tensorboard.py  draw.py  draw_functions.py  metrics.py  tensorboard.py  trainer.py
utils/: cifar_10.py  crop_imgs.py  cut_images.py  get_standardization_values.py  label_imgs.py  masks_to_class.py  mosaic.py  preprocess_imagenette.py  show_img.py  split_client.py  split_train_val.py  split_train_val_from_csv.py  split_train_val_from_csv_side_aug.py  video_to_images.py
